--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-project-note-opener",
+	"name": "Project Note Opener",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "This is a simple plugin to chose and open a project note.",
+	"author": "Roman Kubiv",
+	"authorUrl": "http://roman.kubiv.com",
 	"isDesktopOnly": false
 }
