--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "authorUrl": "https://roman.kubiv.com",
   "fundingUrl": "https://www.buymeacoffee.com/romankubiv",
   "description": "This is a simple plugin to chose and open a project note.",
-  "id": "obsidian-project-note-opener",
+  "id": "project-note-opener",
   "isDesktopOnly": false
 }
