--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "author": "Roman Kubiv",
-  "minAppVersion": "0.15.0",
-  "name": "Project Note Opener",
-  "version": "0.0.1",
-  "authorUrl": "https://roman.kubiv.com",
-  "fundingUrl": "https://www.buymeacoffee.com/romankubiv",
-  "description": "This is a simple plugin to chose and open a project note.",
-  "id": "project-note-opener",
-  "isDesktopOnly": false
+	"author": "Roman Kubiv",
+	"minAppVersion": "0.15.0",
+	"name": "Filtered Note Opener",
+	"version": "1.0.0",
+	"authorUrl": "https://roman.kubiv.com",
+	"fundingUrl": "https://www.buymeacoffee.com/romankubiv",
+	"description": "A simple plugin to chose and open notes based on filters.",
+	"id": "filtered-note-opener",
+	"isDesktopOnly": false
 }
