--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 	"author": "Roman Kubiv",
 	"minAppVersion": "0.15.0",
 	"name": "Picker",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"authorUrl": "https://roman.kubiv.com",
 	"fundingUrl": "https://www.buymeacoffee.com/romankubiv",
-	"description": "Chose and open notes with filters.",
+	"description": "User defined Filter Sets to open notes",
 	"id": "picker",
 	"isDesktopOnly": false
 }
