--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-picker",
-	"version": "1.1.0",
-	"description": "User defined filter sets to open notes in Obsidian",
+	"version": "1.1.1",
+	"description": "Sets of notes defined by filters to open notes",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
