--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-picker",
-	"version": "1.1.2",
-	"description": "Sets of notes defined by filters to open notes",
+	"name": "obsidian-filtered-opener",
+	"version": "1.1.3",
+	"description": "Open notes and folders, chose from sets defined by filters",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
