--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"version": "1.1.3",
 	"authorUrl": "https://roman.kubiv.com",
 	"fundingUrl": "https://www.buymeacoffee.com/romankubiv",
-	"description": "Open notes and folders, chose from sets defined by filters",
+	"description": "Open notes and folders, chose from sets defined by filters.",
 	"id": "filtered-opener",
 	"isDesktopOnly": false
 }
