--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-filtered-opener",
 	"version": "1.1.3",
-	"description": "Open notes and folders, chose from sets defined by filters",
+	"description": "Open notes and folders, chose from sets defined by filters.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
